Bug fixes para os scripts de 2 seções

--- a/scripts/check_test_2sec.ipynb
+++ b/scripts/check_test_2sec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +100,8 @@
     "\n",
     "brake_pow2_FD = Q_(FD_sheet.range('Z36').value,'kW')\n",
     "\n",
-    "D2 = Q_(FD_sheet.range('AB132').value,'mm')\n",
-    "b2 = Q_(FD_sheet.range('AQ132').value,'mm')\n",
+    "D2 = Q_(FD_sheet.range('AB133').value,'mm')\n",
+    "b2 = Q_(FD_sheet.range('AQ133').value,'mm')\n",
     "\n",
     "if SS_config=='IN':\n",
     "    GasesFD = FD_sheet.range('B69:B85').value\n",
@@ -240,15 +240,8 @@
     "    for i in range(Nc2):\n",
     "        Curva2[i,:].value=Caux2[Id2[i]][:]\n",
     "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
+    "\n",
     "### Reading and writing in the Actual Test Data Sheet\n",
     "\n",
     "Dados_AT=AT_sheet['G7:S16']\n",
@@ -367,15 +360,11 @@
     "        \n",
     "\n",
     "Imp_AT = ccp.Impeller([P_AT[i] for i in range(len(P_AT))],b=b,D=D)\n",
-    "Imp2_AT = ccp.Impeller([P2_AT[i] for i in range(len(P2_AT))],b=b2,D=D2)    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Imp2_AT = ccp.Impeller([P2_AT[i] for i in range(len(P2_AT))],b=b2,D=D2)    \n",
+    "\n",
+    "\n",
+    "speed_AT\n",
+    "\n",
     "if AT_sheet['U3'].value=='Vazão Seção 1':\n",
     "    QQ=np.array(Dados_AT[:,1].value)\n",
     "    \n",
@@ -593,6 +582,13 @@
     "    \n",
     "    AT_sheet['G47:AB47'].value=[None]*len(Results2_AT[0,:].value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
