--- a/scripts/val_test_proc_2sec.ipynb
+++ b/scripts/val_test_proc_2sec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +102,8 @@
     "\n",
     "brake_pow2_FD = Q_(FD_sheet.range('Z36').value,'kW')\n",
     "\n",
-    "D2 = Q_(FD_sheet.range('AB132').value,'mm')\n",
-    "b2 = Q_(FD_sheet.range('AQ132').value,'mm')\n",
+    "D2 = Q_(FD_sheet.range('AB133').value,'mm')\n",
+    "b2 = Q_(FD_sheet.range('AQ133').value,'mm')\n",
     "\n",
     "if SS_config=='IN':\n",
     "    GasesFD = FD_sheet.range('B69:B85').value\n",
@@ -174,15 +174,8 @@
     "FD_sheet['AT32'].value=P2_FD._eff_pol_schultz().magnitude\n",
     "FD_sheet['AT33'].value=P2_FD._power_calc().to('kW').magnitude\n",
     "FD_sheet['K90'].value=sucFD.molar_mass().to('g/mol').magnitude\n",
-    "FD_sheet['N90'].value=SS_FD.molar_mass().to('g/mol').magnitude"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "FD_sheet['N90'].value=SS_FD.molar_mass().to('g/mol').magnitude\n",
+    "\n",
     "### Reading and writing SECTION 1 from the TP sheet\n",
     "\n",
     "Ps_TP = Q_(TP_sheet.range('L6').value,TP_sheet.range('M6').value)\n",
@@ -296,15 +289,8 @@
     "    TP_sheet['H35'].value=P_TPconv._power_calc().to('kW').magnitude/P_FD._power_calc().to('kW').magnitude\n",
     "\n",
     "\n",
-    "TP_sheet['G36'].value=P_TP._eff_pol_schultz().magnitude"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "TP_sheet['G36'].value=P_TP._eff_pol_schultz().magnitude\n",
+    "\n",
     "### Reading and writing SECTION 2 from the TP sheet\n",
     "\n",
     "Ps2_TP = Pd_TP*0.995\n",
@@ -400,11 +386,11 @@
     "    RCTP=0.988/Re2TP**0.243\n",
     "    RCFD=0.988/Re2FD**0.243\n",
     "\n",
-    "    RBTP=np.log(0.000125+13.67/Re2TP)/np.log(rug+13.67/ReTP)\n",
-    "    RBFD=np.log(0.000125+13.67/Re2FD)/np.log(rug+13.67/ReFD)\n",
+    "    RBTP=np.log(0.000125+13.67/Re2TP)/np.log(rug+13.67/Re2TP)\n",
+    "    RBFD=np.log(0.000125+13.67/Re2FD)/np.log(rug+13.67/Re2FD)\n",
     "\n",
-    "    RATP=0.066+0.934*(4.8e6*b.to('ft').magnitude/ReTP)**RCTP\n",
-    "    RAFD=0.066+0.934*(4.8e6*b.to('ft').magnitude/ReFD)**RCFD\n",
+    "    RATP=0.066+0.934*(4.8e6*b2.to('ft').magnitude/Re2TP)**RCTP\n",
+    "    RAFD=0.066+0.934*(4.8e6*b2.to('ft').magnitude/Re2FD)**RCFD\n",
     "\n",
     "    corr=RAFD/RATP*RBFD/RBTP\n",
     "    \n",
@@ -460,6 +446,58 @@
     "\n",
     "\n",
     "TP_sheet['L36'].value=P2_TP._eff_pol_schultz().magnitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.8243052553131596 dimensionless"
+      ],
+      "text/latex": [
+       "$0.8243052553131596\\ dimensionless$"
+      ],
+      "text/plain": [
+       "0.8243052553131596 <Unit('dimensionless')>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P2_TP.eff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.9952950018877403 dimensionless"
+      ],
+      "text/latex": [
+       "$0.9952950018877403\\ dimensionless$"
+      ],
+      "text/plain": [
+       "0.9952950018877403 <Unit('dimensionless')>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr"
    ]
   },
   {
