Remoção dos scripts .py

--- a/scripts/val_test_proc.ipynb
+++ b/scripts/val_test_proc.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "While opening c:\\users\\hr7o\\anaconda3\\lib\\site-packages\\ccp\\config\\new_units.txt\n[Errno 2] No such file or directory: 'c:\\\\users\\\\hr7o\\\\anaconda3\\\\lib\\\\site-packages\\\\ccp\\\\config\\\\new_units.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\users\\hr7o\\anaconda3\\lib\\site-packages\\pint\\registry.py\u001b[0m in \u001b[0;36mload_definitions\u001b[1;34m(self, file, is_resource)\u001b[0m\n\u001b[0;32m    359\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 360\u001b[1;33m                     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    361\u001b[0m                         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_definitions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_resource\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'c:\\\\users\\\\hr7o\\\\anaconda3\\\\lib\\\\site-packages\\\\ccp\\\\config\\\\new_units.txt'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-1e8d1f4f8584>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mxlwings\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mxw\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mccp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mccp\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mState\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mQ_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\hr7o\\anaconda3\\lib\\site-packages\\ccp\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[0m_new_units\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_Path\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparent\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;34m'config/new_units.txt'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[0mureg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_UnitRegistry\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m \u001b[0mureg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_definitions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_new_units\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     82\u001b[0m \u001b[0mQ_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mureg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mQuantity\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[0m_warnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilterwarnings\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ignore'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'The unit of the quantity is stripped'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\hr7o\\anaconda3\\lib\\site-packages\\pint\\registry.py\u001b[0m in \u001b[0;36mload_definitions\u001b[1;34m(self, file, is_resource)\u001b[0m\n\u001b[0;32m    366\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    367\u001b[0m                 \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'message'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 368\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'While opening {}\\n{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    369\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    370\u001b[0m         \u001b[0mifile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSourceIterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: While opening c:\\users\\hr7o\\anaconda3\\lib\\site-packages\\ccp\\config\\new_units.txt\n[Errno 2] No such file or directory: 'c:\\\\users\\\\hr7o\\\\anaconda3\\\\lib\\\\site-packages\\\\ccp\\\\config\\\\new_units.txt'"
+     ]
+    }
+   ],
    "source": [
     "import xlwings as xw\n",
     "import ccp\n",
@@ -190,6 +208,102 @@
     "\n",
     "\n",
     "TP_sheet['G28'].value=P_TP._eff_pol_schultz().magnitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "environ{'ALLUSERSPROFILE': 'C:\\\\ProgramData',\n",
+       "        'ANSYS160_DIR': 'C:\\\\Program Files\\\\ANSYS Inc\\\\v160\\\\ANSYS',\n",
+       "        'ANSYS_SYSDIR': 'winx64',\n",
+       "        'ANSYS_SYSDIR32': 'win32',\n",
+       "        'ANS_OLD_ATTACH': '1',\n",
+       "        'APPDATA': 'C:\\\\Users\\\\hr7o\\\\AppData\\\\Roaming',\n",
+       "        'AWP_LOCALE160': 'en-us',\n",
+       "        'AWP_ROOT160': 'C:\\\\Program Files\\\\ANSYS Inc\\\\v160',\n",
+       "        'CADOE_DOCDIR160': 'C:\\\\Program Files\\\\ANSYS Inc\\\\v160\\\\CommonFiles\\\\help\\\\en-us\\\\solviewer',\n",
+       "        'CADOE_LIBDIR160': 'C:\\\\Program Files\\\\ANSYS Inc\\\\v160\\\\CommonFiles\\\\Language\\\\en-us',\n",
+       "        'COMMONPROGRAMFILES': 'C:\\\\Program Files\\\\Common Files',\n",
+       "        'COMMONPROGRAMFILES(X86)': 'C:\\\\Program Files (x86)\\\\Common Files',\n",
+       "        'COMMONPROGRAMW6432': 'C:\\\\Program Files\\\\Common Files',\n",
+       "        'COMPUTERNAME': 'NO00079826',\n",
+       "        'COMSPEC': 'C:\\\\WINDOWS\\\\system32\\\\cmd.exe',\n",
+       "        'FP_NO_HOST_CHECK': 'NO',\n",
+       "        'HOMEDRIVE': 'C:',\n",
+       "        'HOMEPATH': '\\\\Users\\\\hr7o',\n",
+       "        'HTTPS_PROXY': 'http://localhost:53128',\n",
+       "        'HTTP_PROXY': 'http://localhost:53128',\n",
+       "        'ICEMCFD_ROOT160': 'C:\\\\Program Files\\\\ANSYS Inc\\\\v160\\\\icemcfd',\n",
+       "        'ICEMCFD_SYSDIR': 'win64_amd',\n",
+       "        'LIB': 'C:\\\\Program Files (x86)\\\\SQLXML 3.0\\\\bin\\\\',\n",
+       "        'LOCALAPPDATA': 'C:\\\\Users\\\\hr7o\\\\AppData\\\\Local',\n",
+       "        'LOGONSERVER': '\\\\\\\\SPTBRDC12',\n",
+       "        'LSTC_LICENSE': 'ANSYS',\n",
+       "        'NO_PROXY': 'petrobras.com.br,petrobras.biz,localhost,127.0.0.*,192.168.*,10.*',\n",
+       "        'NUMBER_OF_PROCESSORS': '4',\n",
+       "        'OS': 'Windows_NT',\n",
+       "        'PATH': 'C:\\\\Users\\\\hr7o\\\\anaconda3;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Library\\\\mingw-w64\\\\bin;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Library\\\\usr\\\\bin;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Library\\\\bin;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Scripts;C:\\\\Program Files (x86)\\\\Common Files\\\\Oracle\\\\Java\\\\javapath;C:\\\\ProgramData\\\\Oracle\\\\Java\\\\javapath;C:\\\\WINDOWS\\\\system32;C:\\\\WINDOWS;C:\\\\WINDOWS\\\\System32\\\\Wbem;C:\\\\WINDOWS\\\\System32\\\\WindowsPowerShell\\\\v1.0\\\\;C:\\\\Program Files\\\\Aladdin\\\\eToken\\\\PKIClient\\\\x32;C:\\\\Program Files\\\\Aladdin\\\\eToken\\\\PKIClient\\\\x64;C:\\\\Program Files\\\\Intel\\\\WiFi\\\\bin\\\\;C:\\\\Program Files\\\\Common Files\\\\Intel\\\\WirelessCommon\\\\;C:\\\\Program Files (x86)\\\\IXOS\\\\bin;C:\\\\Program Files\\\\MATLAB\\\\MATLAB Compiler Runtime\\\\v82\\\\runtime\\\\win64;C:\\\\Program Files (x86)\\\\Bently Nevada\\\\System 1\\\\;C:\\\\Program Files (x86)\\\\Common Files\\\\Bently Nevada;C:\\\\Windows\\\\Microsoft.NET\\\\Framework\\\\v2.0.50727;C:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\80\\\\Tools\\\\Binn\\\\;C:\\\\Program Files\\\\Microsoft SQL Server\\\\Client SDK\\\\ODBC\\\\110\\\\Tools\\\\Binn\\\\;C:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\120\\\\Tools\\\\Binn\\\\;C:\\\\Program Files\\\\Microsoft SQL Server\\\\120\\\\Tools\\\\Binn\\\\;C:\\\\Program Files\\\\Microsoft SQL Server\\\\120\\\\DTS\\\\Binn\\\\;C:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\120\\\\Tools\\\\Binn\\\\ManagementStudio\\\\;C:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\120\\\\DTS\\\\Binn\\\\;C:\\\\Program Files (x86)\\\\Bently Nevada\\\\System 1\\\\;C:\\\\Program Files (x86)\\\\Common Files\\\\Bently Nevada;C:\\\\Windows\\\\Microsoft.NET\\\\Framework\\\\v2.0.50727;C:\\\\Program Files (x86)\\\\PIPC\\\\bin\\\\;C:\\\\Program Files\\\\PIPC\\\\bin\\\\;C:\\\\WINDOWS\\\\System32\\\\WindowsPowerShell\\\\v1.0\\\\;C:\\\\Users\\\\hr7o\\\\anaconda3;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Library\\\\mingw-w64\\\\bin;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Library\\\\usr\\\\bin;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Library\\\\bin;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\Scripts;C:\\\\WINDOWS\\\\system32;C:\\\\WINDOWS;C:\\\\WINDOWS\\\\System32\\\\Wbem;C:\\\\WINDOWS\\\\System32\\\\WindowsPowerShell\\\\v1.0\\\\;C:\\\\Program Files\\\\Aladdin\\\\eToken\\\\PKIClient\\\\x32;C:\\\\Program Files\\\\Aladdin\\\\eToken\\\\PKIClient\\\\x64;C:\\\\Program Files\\\\Intel\\\\WiFi\\\\bin\\\\;C:\\\\Program Files\\\\Common Files\\\\Intel\\\\WirelessCommon\\\\;C:\\\\Program Files (x86)\\\\IXOS\\\\bin;C:\\\\Program Files\\\\MATLAB\\\\MATLAB Compiler Runtime\\\\v82\\\\runtime\\\\win64;C:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\80\\\\Tools\\\\Binn\\\\;c:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\100\\\\Tools\\\\Binn\\\\;c:\\\\Program Files\\\\Microsoft SQL Server\\\\100\\\\Tools\\\\Binn\\\\;c:\\\\Program Files\\\\Microsoft SQL Server\\\\100\\\\DTS\\\\Binn\\\\;C:\\\\Program Files (x86)\\\\Bently Nevada\\\\System 1\\\\;C:\\\\Program Files (x86)\\\\Common Files\\\\Bently Nevada;C:\\\\Windows\\\\Microsoft.NET\\\\Framework\\\\v2.0.50727;C:\\\\Program Files (x86)\\\\PIPC\\\\bin\\\\;C:\\\\WINDOWS\\\\system32;C:\\\\WINDOWS;C:\\\\WINDOWS\\\\System32\\\\Wbem;C:\\\\WINDOWS\\\\System32\\\\WindowsPowerShell\\\\v1.0\\\\;C:\\\\Program Files\\\\Aladdin\\\\eToken\\\\PKIClient\\\\x32;C:\\\\Program Files\\\\Aladdin\\\\eToken\\\\PKIClient\\\\x64;C:\\\\Program Files\\\\Intel\\\\WiFi\\\\bin\\\\;C:\\\\Program Files\\\\Common;C:\\\\Program Files (x86)\\\\PIPC\\\\AF\\\\PublicAssemblies\\\\4.0;C:\\\\Users\\\\hr7o\\\\AppData\\\\Local\\\\Programs\\\\XLTRC2;C:\\\\Users\\\\hr7o\\\\Documents\\\\Portable Git\\\\ccp;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\lib\\\\site-packages\\\\pywin32_system32;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\lib\\\\site-packages\\\\pywin32_system32;C:\\\\Users\\\\hr7o\\\\anaconda3\\\\lib\\\\site-packages\\\\pywin32_system32',\n",
+       "        'PATHEXT': '.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC',\n",
+       "        'PIHOME': 'C:\\\\Program Files (x86)\\\\PIPC',\n",
+       "        'PIHOME64': 'C:\\\\Program Files\\\\PIPC\\\\',\n",
+       "        'PLMVIS_82_LIBPATH': 'C:\\\\Program Files (x86)\\\\SAP\\\\FrontEnd\\\\SAPgui\\\\Program',\n",
+       "        'PROCESSOR_ARCHITECTURE': 'AMD64',\n",
+       "        'PROCESSOR_IDENTIFIER': 'AMD64 Family 21 Model 48 Stepping 1, AuthenticAMD',\n",
+       "        'PROCESSOR_LEVEL': '21',\n",
+       "        'PROCESSOR_REVISION': '3001',\n",
+       "        'PROGRAMDATA': 'C:\\\\ProgramData',\n",
+       "        'PROGRAMFILES': 'C:\\\\Program Files',\n",
+       "        'PROGRAMFILES(X86)': 'C:\\\\Program Files (x86)',\n",
+       "        'PROGRAMW6432': 'C:\\\\Program Files',\n",
+       "        'PSMODULEPATH': 'C:\\\\WINDOWS\\\\system32\\\\WindowsPowerShell\\\\v1.0\\\\Modules\\\\;C:\\\\Program Files (x86)\\\\Microsoft SQL Server\\\\120\\\\Tools\\\\PowerShell\\\\Modules\\\\;C:\\\\Program Files (x86)\\\\Microsoft Azure Information Protection\\\\Powershell',\n",
+       "        'PTSMINSTALLPATH_X86': 'C:\\\\Program Files (x86)\\\\Hewlett-Packard\\\\HP ProtectTools Security Manager\\\\',\n",
+       "        'PUBLIC': 'C:\\\\Users\\\\Public',\n",
+       "        'PYTHONPATH': 'C:\\\\Program Files (x86)\\\\PIPC\\\\AF\\\\PublicAssemblies\\\\4.0',\n",
+       "        'P_SCHEMA': 'C:\\\\Program Files\\\\ANSYS Inc\\\\v160\\\\AISOL\\\\CADIntegration\\\\Parasolid\\\\PSchema',\n",
+       "        'RPPREFIX': 'C:\\\\Users\\\\hr7o\\\\Documents\\\\Portable Git\\\\ccp\\\\ccp\\\\REFPROP',\n",
+       "        'SESSIONNAME': 'Console',\n",
+       "        'SNC_LIB': 'C:\\\\Program Files (x86)\\\\SAP\\\\FrontEnd\\\\SecureLogin\\\\lib\\\\secgss.dll',\n",
+       "        'SNC_LIB_64': 'C:\\\\Program Files\\\\SAP\\\\FrontEnd\\\\SecureLogin\\\\lib\\\\secgss.dll',\n",
+       "        'SSF_LIBRARY_PATH': 'C:\\\\Program Files (x86)\\\\SAP\\\\FrontEnd\\\\SecureLogin\\\\lib\\\\secssf.dll',\n",
+       "        'SSF_LIBRARY_PATH_64': 'C:\\\\Program Files\\\\SAP\\\\FrontEnd\\\\SecureLogin\\\\lib\\\\secssf.dll',\n",
+       "        'SYSTEMDRIVE': 'C:',\n",
+       "        'SYSTEMROOT': 'C:\\\\WINDOWS',\n",
+       "        'TCVIS_ENABLE_AERO': 'True',\n",
+       "        'TEMP': 'C:\\\\Users\\\\hr7o\\\\AppData\\\\Local\\\\Temp',\n",
+       "        'TMP': 'C:\\\\Users\\\\hr7o\\\\AppData\\\\Local\\\\Temp',\n",
+       "        'UATDATA': 'C:\\\\WINDOWS\\\\CCM\\\\UATData\\\\D9F8C395-CAB8-491d-B8AC-179A1FE1BE77',\n",
+       "        'USERDNSDOMAIN': 'PETROBRAS.BIZ',\n",
+       "        'USERDOMAIN': 'PETROBRAS',\n",
+       "        'USERNAME': 'hr7o',\n",
+       "        'USERPROFILE': 'C:\\\\Users\\\\hr7o',\n",
+       "        'WINDIR': 'C:\\\\WINDOWS',\n",
+       "        'WINDOWS_TRACING_FLAGS': '3',\n",
+       "        'WINDOWS_TRACING_LOGFILE': 'C:\\\\BVTBin\\\\Tests\\\\installpackage\\\\csilogfile.log',\n",
+       "        '_NT_SYMBOL_PATH': 'C:\\\\WINDOWS\\\\symbols;C:\\\\WINDOWS\\\\symbols\\\\dll;;',\n",
+       "        'CONDA_PREFIX': 'C:\\\\Users\\\\hr7o\\\\anaconda3',\n",
+       "        'JPY_INTERRUPT_EVENT': '2120',\n",
+       "        'IPY_INTERRUPT_EVENT': '2120',\n",
+       "        'JPY_PARENT_PID': '2104',\n",
+       "        'TERM': 'xterm-color',\n",
+       "        'CLICOLOR': '1',\n",
+       "        'PAGER': 'cat',\n",
+       "        'GIT_PAGER': 'cat',\n",
+       "        'MPLBACKEND': 'module://ipykernel.pylab.backend_inline'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys, os\n",
+    "os.environ\n"
    ]
   },
   {
