Prioridade para uso da vazão mássica nas planilhas de teste.

--- a/scripts/check_test.ipynb
+++ b/scripts/check_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
     "    Td_AT = Q_(Dados_AT[i,5].value,AT_sheet.range('L6').value)\n",
     "\n",
     "\n",
-    "    if Dados_AT[i,0].value==None: \n",
+    "    if Dados_AT[i,1].value!=None: \n",
     "        V_test=True\n",
     "        flow_v_AT = Q_(Dados_AT[i,1].value,AT_sheet.range('H6').value)\n",
     "    else:\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
