--- a/scripts/check_test_2sec.ipynb
+++ b/scripts/check_test_2sec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
     "    Td_AT = Q_(Dados_AT[i,5].value,AT_sheet.range('L6').value)\n",
     "\n",
     "\n",
-    "    if Dados_AT[i,0].value==None: \n",
+    "    if Dados_AT[i,1].value!=None: \n",
     "        V_test=True\n",
     "        flow_v_AT = Q_(Dados_AT[i,1].value,AT_sheet.range('H6').value)\n",
     "    else:\n",
@@ -311,7 +311,7 @@
     "    Pd2_AT = Q_(Dados_AT[i,9].value,AT_sheet.range('P6').value)\n",
     "    Td2_AT = Q_(Dados_AT[i,10].value,AT_sheet.range('Q6').value)\n",
     "\n",
-    "    if Dados_AT[i,6].value==None: \n",
+    "    if Dados_AT[i,7].value!=None: \n",
     "        V_test=True\n",
     "        flowSS_v_AT = Q_(Dados_AT[i,7].value,AT_sheet.range('N6').value)\n",
     "    else:\n",
