Inclusão de rotina para incluir caminho Public/REFPROP

--- a/scripts/check_test_2sec.ipynb
+++ b/scripts/check_test_2sec.ipynb
@@ -2,11 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
+    "import os\n",
+    "try:\n",
+    "    aux=os.environ['RPprefix']\n",
+    "except:\n",
+    "    os.environ['RPprefix']='C:\\\\Users\\\\Public\\\\REFPROP'\n",
     "import ccp\n",
     "from ccp import State, Q_\n",
     "import numpy as np\n",
@@ -583,6 +588,13 @@
     "    \n",
     "    AT_sheet['G47:AB47'].value=[None]*len(Results2_AT[0,:].value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
