--- a/scripts/check_test.ipynb
+++ b/scripts/check_test.ipynb
@@ -7,6 +7,12 @@
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
+    "import os\n",
+    "try:\n",
+    "    aux=os.environ['RPprefix']\n",
+    "except:\n",
+    "    os.environ['RPprefix']='C:\\\\Users\\\\Public\\\\REFPROP'\n",
+    "\n",
     "import ccp\n",
     "from ccp import State, Q_\n",
     "import numpy as np\n",
