--- a/scripts/val_test_proc_2sec.ipynb
+++ b/scripts/val_test_proc_2sec.ipynb
@@ -7,6 +7,11 @@
    "outputs": [],
    "source": [
     "import xlwings as xw\n",
+    "import os\n",
+    "try:\n",
+    "    aux=os.environ['RPprefix']\n",
+    "except:\n",
+    "    os.environ['RPprefix']='C:\\\\Users\\\\Public\\\\REFPROP'\n",
     "import ccp\n",
     "from ccp import State, Q_\n",
     "import numpy as np\n",
