Correção da formatação condicional nas planilhas

--- a/scripts/check_test.ipynb
+++ b/scripts/check_test.ipynb
@@ -128,15 +128,9 @@
     "        N=i\n",
     "        break\n",
     "\n",
-    "Dados_AT=Dados_AT[0:N,:]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Dados_AT=Dados_AT[0:N,:]\n",
+    "\n",
+    "\n",
     "speed_AT = Q_(AT_sheet.range('H4').value,AT_sheet.range('I4').value)\n",
     "N_ratio=speed_FD/speed_AT\n",
     "\n",
@@ -183,15 +177,8 @@
     "        \n",
     "        \n",
     "Imp_AT = ccp.Impeller([P_AT[i] for i in range(len(P_AT))],b=b,D=D)\n",
-    "# Imp_AT.new_suc = P_FD.suc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Imp_AT.new_suc = P_FD.suc\n",
+    "\n",
     "QQ=np.array(Dados_AT[:,1].value)\n",
     "Id=list(np.argsort(QQ))\n",
     "Daux=Dados_AT.value\n",
