--- a/scripts/check_test_2sec.ipynb
+++ b/scripts/check_test_2sec.ipynb
@@ -591,10 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file=open('Modelo_2sections.xlsx','r+')"
+   ]
   },
   {
    "cell_type": "code",
