Add sandberg-colby method for head calculation

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -4,3 +4,11 @@
   year={2004},
   publisher={Springer Science \& Business Media}
 }
+
+@inproceedings{sandberg2013limitations,
+  title={Limitations of ASME PTC 10 in Accurately Evaluation Centrifugal Compressor Thermodynamic Performance},
+  author={Sandberg, Mark E and Colby, Gary M and others},
+  booktitle={Proceedings of the 42nd Turbomachinery Symposium},
+  year={2013},
+  organization={Texas A\&M University. Turbomachinery Laboratories}
+}
