Add head reference as per Huntington 2017

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -54,3 +54,11 @@
   year={1977}
 }
 
+@article{huntington2017,
+author = {Huntington, Richard},
+year = {2017},
+month = {09},
+pages = {},
+title = {Another New Look at Polytropic Calculations Methods for Turbomachinery Performance},
+doi = {10.13140/RG.2.2.10331.87841}
+}
