Add cases from Evans-Huble

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -62,3 +62,12 @@ pages = {},
 title = {Another New Look at Polytropic Calculations Methods for Turbomachinery Performance},
 doi = {10.13140/RG.2.2.10331.87841}
 }
+
+@article{evans2017,
+  title={Centrifugal Compressor Performance Making Enlightened Analysis Decisions},
+  author={Evans, Fred and Huble, Spencer and others},
+  booktitle={Proceedings of the 46th Turbomachinery Symposium},
+  year={2017},
+  organization={Turbomachinery Laboratory, Texas A\&M Engineering Experiment Station},
+  doi={https://hdl.handle.net/1969.1/166782},
+}
