Give warning only when trying to plot the envelope

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -71,3 +71,11 @@ doi = {10.13140/RG.2.2.10331.87841}
   organization={Turbomachinery Laboratory, Texas A\&M Engineering Experiment Station},
   doi={https://hdl.handle.net/1969.1/166782},
 }
+
+@Misc{LEMMON-RP10,
+Title = {{NIST Standard Reference Database 23: Reference Fluid Thermodynamic and Transport Properties-REFPROP, Version 10.0, National Institute of Standards and Technology}},
+Author = {E. W. Lemmon and and Ian H. Bell and M. L. Huber and M. O. McLinden},
+Year = {2018},
+Doi = {http://dx.doi.org/10.18434/T4JS3C},
+Url = {https://www.nist.gov/srd/refprop}
+}
