Add error and time analysis for polytropic methods

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -59,6 +59,7 @@ author = {Huntington, Richard},
 year = {2017},
 month = {09},
 pages = {},
+journal = {},
 title = {Another New Look at Polytropic Calculations Methods for Turbomachinery Performance},
 doi = {10.13140/RG.2.2.10331.87841}
 }
@@ -69,6 +70,7 @@ doi = {10.13140/RG.2.2.10331.87841}
   booktitle={Proceedings of the 46th Turbomachinery Symposium},
   year={2017},
   organization={Turbomachinery Laboratory, Texas A\&M Engineering Experiment Station},
+  journal = {},
   doi={https://hdl.handle.net/1969.1/166782},
 }
 
@@ -78,4 +80,14 @@ Author = {E. W. Lemmon and and Ian H. Bell and M. L. Huber and M. O. McLinden},
 Year = {2018},
 Doi = {http://dx.doi.org/10.18434/T4JS3C},
 Url = {https://www.nist.gov/srd/refprop}
+}
+
+@article{huntington2020,
+author = {Huntington, Richard},
+year = {2020},
+month = {11},
+pages = {},
+journal = {},
+title = {Polytropic Calculation Wars Are Over},
+doi = {10.13140/RG.2.2.26600.90887/1}
 }
