Try to build readthedocs with python 3.8

--- a/docs/tutorials/tutorial.ipynb
+++ b/docs/tutorials/tutorial.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Here lets define a suction pressure `ps` and a suction temperature `Ts`.\n",
     "\n",
-    "For the suction pressure we are going to use pint."
+    "For the suction pressure we are going to use pint$.$\n"
    ]
   },
   {
@@ -8304,7 +8304,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -8318,7 +8318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
