--- a/docs/references.bib
+++ b/docs/references.bib
@@ -74,13 +74,27 @@ doi = {10.13140/RG.2.2.10331.87841}
   doi={https://hdl.handle.net/1969.1/166782},
 }
 
-@Misc{LEMMON-RP10,
+@Misc{refprop,
 Title = {{NIST Standard Reference Database 23: Reference Fluid Thermodynamic and Transport Properties-REFPROP, Version 10.0, National Institute of Standards and Technology}},
 Author = {E. W. Lemmon and and Ian H. Bell and M. L. Huber and M. O. McLinden},
 Year = {2018},
 Doi = {http://dx.doi.org/10.18434/T4JS3C},
 Url = {https://www.nist.gov/srd/refprop}
 }
+
+@article{coolprop,
+    author = {Bell, Ian H. and Wronski, Jorrit and Quoilin, Sylvain and Lemort, Vincent},
+    title = {Pure and Pseudo-pure Fluid Thermophysical Property Evaluation and
+             the Open-Source Thermophysical Property Library CoolProp},
+    journal = {Industrial \& Engineering Chemistry Research},
+    volume = {53},
+    number = {6},
+    pages = {2498--2508},
+    year = {2014},
+    doi = {10.1021/ie4033999},
+    URL = {http://pubs.acs.org/doi/abs/10.1021/ie4033999},
+    eprint = {http://pubs.acs.org/doi/pdf/10.1021/ie4033999}
+    }
 
 @article{huntington2020,
 author = {Huntington, Richard},
