asme ptc 10 method implemented and other corrections

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -18,6 +18,14 @@
   doi={10.21423/R1505Q}
 }
 
+@manual{asmePTC10_2022,
+  title={Axial and Centrifugal Compressors},
+  author={ASME},
+  organization={American Society of Mechanical Engineers},
+  address={New York, NY, USA},
+  year={2022},
+}
+
 @article{schultz1962,
     author = {Schultz, John M.},
     title = "{The Polytropic Analysis of Centrifugal Compressors}",
